# sym

./: .gitignore  LICENSE  README.md  Sym.hs  sym.cabal
Data/: CLongArray.hs  Perm.hs  Permgram.hs  SSYT.hs  Size.hs
Data/Perm/: Internal.hs
Math/: Perm.hs  Sym.hs
Math/Perm/: Bijection.hs  Class.hs  Component.hs  Constructions.hs  D8.hs  Group.hs  MeshPattern.hs  Pattern.hs  Simple.hs  Sort.hs  Stat.hs
Math/Sym/: Bijection.hs  Class.hs  D8.hs  Internal.hs  Stat.hs
Sym/: Perm.hs  Permgram.hs
Sym/Internal/: CLongArray.hs  Size.hs  SubSeq.hs  Util.hs
Sym/Perm/: Bijection.hs  Class.hs  Component.hs  Constructions.hs  D8.hs  Group.hs  ListStat.hs  MeshPattern.hs  Meta.hs  Pattern.hs  SSYT.hs  STAT.hs  Simple.hs  Sort.hs  Stat.hs
cbits/: bij.c  bit.c  d8.c  group.c  ordiso.c  rank.c  simple.c  sortop.c  stat.c
include/: bij.h  bit.h  d8.h  group.h  ordiso.h  rank.h  simple.h  sortop.h  stat.h
tests/: ListStat.hs  Properties.hs
util/: migrate-to-0.11.sed
