name:                sym
version:             0.10
synopsis:            Permutations, patterns, and statistics
description:
  Definitions for permutations with an emphasis on permutation
  patterns and permutation statistics.

homepage:            https://github.com/akc/sym
license:             BSD3
license-file:        LICENSE
author:              Anders Claesson
maintainer:          anders.claesson@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/akc/sym.git

library
  exposed-modules:     Data.CLongArray
                       Data.Perm
                       Data.Perm.Internal
                       Data.Permgram
                       Data.SSYT
                       Data.Size
                       Math.Perm
                       Math.Perm.Component
                       Math.Perm.Constructions
                       Math.Perm.D8
                       Math.Perm.Group
                       Math.Perm.Bijection
                       Math.Perm.Stat
                       Math.Perm.Sort
                       Math.Perm.Simple
                       Math.Perm.Pattern
                       Math.Perm.MeshPattern
                       Math.Perm.Class
                       Math.Sym

  build-depends:       base >= 3 && <= 4.7, array >=0.4, hashable >=1.1,
                       QuickCheck >=2.5, containers

  ghc-prof-options:    -auto-all
  ghc-options:         -Wall
  cc-options:          -Wall

  c-sources:           cbits/rank.c
                       cbits/stat.c
                       cbits/d8.c
                       cbits/group.c
                       cbits/bij.c
                       cbits/ordiso.c
                       cbits/bit.c
                       cbits/simple.c
                       cbits/sortop.c
